--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,6 @@
         "files.insertFinalNewline": true, // 保存時、行末に存在する空行を削除
         "files.trimTrailingWhitespace": true,  // 保存時、行末に存在する空白文字を削除
     },
-    "python.venvPath": "${projectfolder}/.venv", // 仮想環境ディレクトリを指定
-    "python.pythonPath": "${projectfolder}/.venv/Scripts/python", // 使用するpythonを指定
     "python.linting.enabled": true, // リンター有効化
     "python.linting.pylintEnabled": false, // デフォルトで有効なpylintを無効化
     "python.linting.lintOnSave": true, // 保存時にリンター自動実行
@@ -25,9 +23,6 @@
         "79",
     ],
     "python.languageServer": "Pylance", // 言語サーバをPylanceに指定
-    "python.analysis.typeCheckingMode": "basic", // 基本的な型チェックをON
-    "python.analysis.diagnosticSeverityOverrides": { // 診断の重大度レベルをオーバーライド
-        "reportMissingImports": "none",
-        "reportOptionalMemberAccess": "none",
-    }
+    "python.terminal.activateEnvironment": true, // venvを自動的に有効化
+    "python.terminal.activateEnvInCurrentTerminal": true, // 新しいターミナルでvenvを自動的に有効化
 }
